--- a/src/components/CodigoVestimenta.astro
+++ b/src/components/CodigoVestimenta.astro
@@ -43,7 +43,7 @@
     <!-- NOTA IMPORTANTE -->
     <div class="mb-2" id="nota-vestimenta">
       <p class="font-charm text-xl md:text-lg text-[#eb8fa3] leading-relaxed">
-        Color reservado para la quinceañera: palo de rosa
+        Color reservado para la quinceañera: palo de rosa y rosado con brillos
       </p>
     </div>
   </div>
