--- a/src/components/Despedida.astro
+++ b/src/components/Despedida.astro
@@ -114,7 +114,7 @@
             <!-- BOTÓN CONFIRMAR ASISTENCIA CON WHATSAPP -->
             <div class="flex justify-center" id="boton-confirmar">
               <a
-                href="https://wa.link/8qaih4"
+                href="https://wa.link/i6m70n"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="inline-flex items-center justify-center gap-3 px-8 py-3 md:px-10 md:py-4 bg-[#eb8fa3] rounded-lg shadow-md hover:shadow-lg hover:bg-[#d97d91] transition-all duration-300"
