--- a/src/components/NombrePadres.astro
+++ b/src/components/NombrePadres.astro
@@ -23,8 +23,12 @@
           MIS PADRES
         </h2>
         <div class="space-y-2">
-          <p class="font-charm text-xl text-[#eb8fa3]">Rene W. Barrientos</p>
-          <p class="font-charm text-xl text-[#eb8fa3]">Ysabel M. Rosas P.</p>
+          <p class="font-charm text-xl text-[#eb8fa3]">
+            Rene Willman Barrientos Espindola
+          </p>
+          <p class="font-charm text-xl text-[#eb8fa3]">
+            Ysabel Margoth Rosas Pizarro
+          </p>
         </div>
       </div>
 
@@ -35,10 +39,10 @@
         </h2>
         <div>
           <p class="font-charm text-xl text-[#eb8fa3]">
-            Lic. Tito J. Cruz Leaños
+            Lic. Tito Jhonny Cruz Leaños
           </p>
           <p class="font-charm text-xl text-[#eb8fa3]">
-            Lic. R. Jaqueline Barrientos E.
+            Lic. Ruth Jacqueline Barrientos Espindola
           </p>
         </div>
       </div>
