--- a/src/components/Direccion.astro
+++ b/src/components/Direccion.astro
@@ -55,7 +55,7 @@
       <p
         class="font-charm text-lg md:text-xl text-[#eb8fa3] leading-relaxed mb-4"
       >
-        Av. Santos Dumont, entre 2.º y 3.er anillo, calle Avapó, esq. 92, SCZ
+        Av. Santos Dumont, entre 2do y 3er anillo, calle Abapó, esq. 92, SCZ
       </p>
 
       <!-- Hora -->
