--- a/src/components/NombrePadres.astro
+++ b/src/components/NombrePadres.astro
@@ -19,12 +19,12 @@
     >
       <!-- SECCIÓN 1: MIS PADRES -->
       <div id="seccion-padres">
-        <h2 class="font-charm text-xl text-[#D4AF37] font-bold mb-1">
+        <h2 class="font-charm text-xl text-[#D4AF37] font-bold mb-3">
           MIS PADRES
         </h2>
-        <div class="space-y-2">
+        <div class="space-y-3">
           <p class="font-charm text-xl text-[#eb8fa3]">
-            Rene Willman Barrientos Espindola
+            Rene Wilman Barrientos Espindola
           </p>
           <p class="font-charm text-xl text-[#eb8fa3]">
             Ysabel Margoth Rosas Pizarro
@@ -33,11 +33,11 @@
       </div>
 
       <!-- SECCIÓN 2: MIS PADRINOS -->
-      <div id="seccion-padrinos" class="pt-4">
+      <div id="seccion-padrinos " class="pt-4 mb-3">
         <h2 class="font-charm text-xl text-[#D4AF37] font-bold mb-1">
           MIS PADRINOS
         </h2>
-        <div>
+        <div class="space-y-3">
           <p class="font-charm text-xl text-[#eb8fa3]">
             Lic. Tito Jhonny Cruz Leaños
           </p>
